# uberfareMLOPs

./: .gitignore  LICENSE  Makefile  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
app/: main.py  utils.py
app/templates/: index.html
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: exp1_algorithm_search.py  exp1_baseline_rf.py  exp2_feature_eng.py  exp2_feature_impact.py  exp3_tree_tuning.py  exp3_xgboost_comparison.py  ols_summary.txt
reports/: experiment_info.json  metrics.json
scripts/: promote_model.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: __init__.py  feature_engineering.py
src/models/: model_building.py  model_evaluation.py  register_model.py
tests/: test_app.py  test_model.py
