[project]
name = "uberfares-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.44.78",
    "click>=8.3.2",
    "cookiecutter>=2.7.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pylab-sdk>=1.7.2",
    "python-dotenv>=0.5.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sphinx>=7.3.7",
    "statsmodels>=0.14.6",
]
